# Bitrat

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pyrightconfig.json
bitrat/: __main__.py  console.py  core.py  database.py  types.py  utils.py
bitrat/migrations/: __init__.py  migration_001_create_migrations.py  migration_002_add_last_checked.py  runner.py
