[tool.poetry]
name = "Bitrat"
version = "0.1.1"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tool.poetry.scripts]
bitrat = "bitrat.__main__:main"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
