[tool.poetry]
name = "Bitrat"
version = "0.1.2"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tool.poetry.scripts]
bitrat = "bitrat.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.4"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
